k8s/platform/vault.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: infra
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: infra-platform-body-limit@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vault.__PUBLIC_DOMAIN__
      secretName: __TLS_SECRET_NAME__
  rules:
    - host: vault.__PUBLIC_DOMAIN__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
